--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ div {
     float:left;
     margin-left: 5px;
     padding-top: 5px;
-    font-size: 16px;
+    font-size: 20px;
     font-family: Verdana, sans-serif;
     color: #ffffff;
 }
@@ -57,7 +57,7 @@ a:hover {
     float: left;
     margin-top: 50px;
     width: 10%;
-    height: 450px;
+    height: 60%;
     background-color: #B9D7D9;
     margin-bottom: 10px;
 }
@@ -67,7 +67,7 @@ a:hover {
     float: right;
     margin-top: 50px;
     width: 88%;
-    height: 450px;
+    height: 60%;
     background-color: #F4EBC3;
     margin-bottom: 10px;
 }
