Added content to index.html
added Lobster font Google API;
added link to resume from video-background.html;
Changed padding-left for index.html

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ ul li {
     position:absolute;
     top:0;
     left:0
+    opacity:0.7;
 }
 
 .divider {
@@ -197,6 +198,10 @@ a.about-section-btn {
     background: #34495e;
 }
 
+#a2f {
+    font-family: Lobster;
+    text-transform: lowercase;
+}
 
 
 /* SMALL VIDEO BACKGROUND 
