--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -137,7 +137,7 @@ a:hover {
 }
 
 #asian {
-    font-family: KaiTi, STKaiTi, Kai;
+    font-family: KaiTi, "STKaiTi", "Kai", "Fang Song", "FangSong";
 }
 
 .body {
