--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,7 @@ a.big-background-btn {
 .about-section-container {
     text-align:center;
     padding-bottom:50px
+    width: 90%;
 }
 
 .about-section-title {
