Changes to artists, index, style.css
Added font api to artist-theme.html;
added fadein effect to patter on style.css;
Changed title on index.html;

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,12 @@ ul li {
     top:0;
     left:0
     opacity:0.7;
+    
+    -webkit-animation: fadein 0.5s ease 0s forwards;
+    -moz-animation: fadein 0.5s ease 0s forwards;
+    -ms-animation: fadein 0.5s ease 0s forwards;
+    -o-animation: fadein 0.5s ease 0s forwards;
+    animation: fadein 0.5s ease 0s forwards;
 }
 
 .divider {
