--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,8 @@ ul li {
 .big-background {
     z-index:550;
     text-align:center;
-    height:100%;
-    min-height:100%;
+    height:60%;
+    min-height:60%;
     position:relative;
     overflow:hidden
 }
@@ -241,6 +241,17 @@ a.about-section-btn {
 #a2f {
     font-family: Lobster;
     text-transform: lowercase;
+}
+
+.colleges {
+    float: left;
+    margin-left: 40px;
+    clear: left;
+}
+
+a.colleges {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 
