--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ nav {
 }
 
 nav a {
+    position: relative;
     padding: 20px 20px 20px 20px;
     color: white;
     text-transform: uppercase;
@@ -43,6 +44,7 @@ nav a {
 
 nav a:hover {
     background: rgba(255,255,255,0.4);
+    color: rgba(0,0,0,0.7);
 }
 
 
@@ -250,8 +252,8 @@ a.about-section-btn {
 }
 
 a.colleges {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 
