Changes to css styles for artist and video themes
Split style.css into a & v_styles.css;
Changed heights for video background;

--- a/css/a_style.css
+++ b/css/a_style.css
@@ -1,6 +1,6 @@
 /*
-Tutorial Name: Modernize Your Site: Building a YouTube Video Background 
-Author: Samuel Dalusung
+Original CSS Author: Samuel Dalusung
+Changes: Marvin Alcantara
 */
 
 
@@ -101,8 +101,8 @@ ul li {
 .big-background {
     z-index:550;
     text-align:center;
-    height:60%;
-    min-height:60%;
+    height:70%;
+    min-height:50%;
     position:relative;
     overflow:hidden
 }
