--- a/css/v_style.css
+++ b/css/v_style.css
@@ -76,7 +76,7 @@ ul li {
     position:absolute;
     top:0;
     left:0
-    opacity:0.7;
+    opacity:0.9;
 }
 
 .divider {
@@ -234,23 +234,6 @@ a.about-section-btn {
     background: #34495e;
 }
 
-#a2f {
-    font-family: Lobster;
-    text-transform: lowercase;
-}
-
-.colleges {
-    float: left;
-    margin-left: 40px;
-    clear: left;
-}
-
-a.colleges {
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-
 /* SMALL VIDEO BACKGROUND 
 ================================================== */
 .small-background-section {
@@ -283,8 +266,9 @@ a.colleges {
 
 
 
-/* SOCIALS
-================================================== */
+/*
+ SOCIALS
+================================================== 
 .socials a {
     color:#fff
 }
@@ -294,6 +278,7 @@ a.colleges {
 }
 
 
+*/
 
 
 /* MEDIA QUERIES
