--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@ div {
     border-radius: 2px;
 }
 
-#sitemast {
+/* #sitemast {
     padding: 0;
     margin: 0;
     overflow: hidden;
@@ -27,10 +27,10 @@ div {
     position: absolute;
     left: 0;
     top: 100px;
-    /* hide-from-IE5/Mac hack \*/
+    /* hide-from-IE5/Mac hack
     top: auto;
     bottom: 0;
-/* end hack */
+    end hack /
 }
 
 #sitemast h1 a {
@@ -39,7 +39,7 @@ div {
 
 #sitemast h1 a, .panel a {
     text-decoration: none;
-}
+} */
 
 #header {
     z-index: 1;
@@ -90,8 +90,9 @@ li {
 a {
     color: #890101;
     text-decoration: none;
-    -moz-transition: 0.2s color linear;
     -webkit-transition: 0.2s color linear;
+    -moz-transition: 0.2s color linear;
+    -o-transition: 0.2s color linear;
     transition: 0.2s color linear;
 }
 
@@ -137,7 +138,13 @@ a:hover {
 }
 
 #asian {
-    font-family: KaiTi, "STKaiTi", "Kai", "Fang Song", "FangSong";
+/*    font-family: KaiTi, "STKaiTi", "Kai", "Fang Song", "FangSong";*/
+    font-family: "KaiTi", "STKaiTi", "Kai", "Fang Song", "FangSong";
+}
+
+@font-face {
+    font-family: "KaiTi";
+    src: url(../fonts/simkai.ttf) format("truetype");
 }
 
 .body {
@@ -170,8 +177,4 @@ footer {
 
 #webContent {
     padding-left: 40px;
-}
-
-#a2f {
-    font-family: Lobster;
 }
