--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -54,37 +54,53 @@ div {
 #name {
     float:left;
     margin-left: 5px;
-    padding-top: 5px;
-    font-size: 20px;
-    font-family: Verdana, sans-serif;
-    color: #ffffff;
+    padding-top: 0px;
+    font-size: 24px;
+    font-family: Calibri, sans-serif;
+    color: #fff;
 }
 
 #email{
     float:right;
     margin-right: 5px;
-    padding-top: 5px;
-    font-size: 16px;
-    font-family: Verdana, sans-serif;
-    color: #ffffff;
+    padding-top: 4px;
+    font-size: 20px;
+    font-family: Calibri, sans-serif;
+    color: #fff;
 }
 
 h4 {
-    margin-left: 10px;
+    margin-top: 12px;
+    margin-left: 12px;
     margin-bottom: 15px;
-    font-family: Verdana, sans-serif;
+    font-family: Calibri, sans-serif;
+    font-size: 20px;
 }
 
 .right p {
-    margin-left: 15px;
-    margin-right: 5px;
-    margin-top: -10px;
-    font-family: Garamond, serif;
-    color: #000000;
+    margin: -10px 5px -5px 24px;
+    font-family: Calibri, sans-serif;
+    font-size: 18px;
+    color: #000;
+    line-height: 1.5;
+}
+
+#workdates {
+    position: relative;
+    text-align: right;
+    margin-top: -22px;
+    padding-right: 12px;
 }
 
 li {
-    list-style-type: square;
+    margin-left: 24px;
+    list-style-type: disc;
+    font-family: Calibri, sans-serif;
+}
+
+#edu {
+    list-style-type: none;
+    margin-left: 12px;
 }
 
 a {
@@ -105,7 +121,8 @@ a:hover {
     float: left;
     margin-top: 50px;
     width: 10%;
-    height: 550px;
+    min-height: 550px;
+    height: auto;
     background-color: #B9D7D9;
     margin-bottom: 10px;
 }
@@ -115,7 +132,7 @@ a:hover {
     float: right;
     margin-top: 50px;
     width: 89%;
-    height: 550px;
+    height: auto;
     background-color: #F4EBC3;
     margin-bottom: 10px;
 }
@@ -126,8 +143,8 @@ a:hover {
     height: 50px;
     background-color: #668284;
     clear: both;
-    font-family: Verdana, sans-serif;
-    font-size: 14px;
+    font-family: Calibri, sans-serif;
+    font-size: 18px;
     text-align: center;
     color: #ffffff;
 }
@@ -177,4 +194,38 @@ footer {
 
 #webContent {
     padding-left: 40px;
+}
+
+table, td {
+    border-collapse: collapse;
+    border: 2px solid rgba(0,0,0,0.1);
+    font-family: Calibri, sans-serif;
+}
+
+td, th {
+    padding: 5px 15px;
+}
+
+table {
+    margin-left: 40px;
+    margin-bottom: 40px;
+}
+
+table tr:nth-child(even) {
+     background-color: #ccc;
+}
+table tr:nth-child(odd) {
+     background-color: #fff;
+}
+table th {
+    color: black;
+    background-color: silver;
+} 
+
+img {
+    font-family: Calibri, sans-serif;
+    font-size: 12px;
+    line-height: 1;
+    display: block;
+    border: 1px dotted silver;
 }
