--- a/css/v_style.css
+++ b/css/v_style.css
@@ -45,6 +45,7 @@ nav a {
 nav a:hover {
     background: rgba(255,255,255,0.6);
     color: rgba(0,0,0,0.8);
+    cursor: pointer;
 }
 
 
@@ -76,7 +77,7 @@ ul li {
     position:absolute;
     top:0;
     left:0
-    opacity:0.01;
+    opacity:0;
 }
 
 .divider {
