--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,44 +2,9 @@ div {
     border-radius: 2px;
 }
 
-/* #sitemast {
-    padding: 0;
-    margin: 0;
+#container {
     overflow: hidden;
-    border-bottom: 1px solid #000;
-    height: 40px;
-    width: 99.5%;
-    position: absolute;
-    z-index: 1;
-    background: #F4EBC3 no-repeat 0 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    border-radius: 2px;
 }
-
-#sitemast h1 {
-    font-size: 2em;
-    line-height: 1em;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    left: 0;
-    top: 100px;
-    /* hide-from-IE5/Mac hack
-    top: auto;
-    bottom: 0;
-    end hack /
-}
-
-#sitemast h1 a {
-    padding: 0 0.25em;
-}
-
-#sitemast h1 a, .panel a {
-    text-decoration: none;
-} */
 
 #header {
     z-index: 1;
@@ -49,6 +14,7 @@ div {
     height: 60px;
     background-color: #668284;
     margin-bottom: 10px;
+    box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.5);
 }
 
 #name {
@@ -57,6 +23,9 @@ div {
     padding-top: 0px;
     font-size: 24px;
     font-family: Calibri, sans-serif;
+}
+
+#name a {
     color: #fff;
 }
 
@@ -82,14 +51,14 @@ h4 {
     font-family: Calibri, sans-serif;
     font-size: 18px;
     color: #000;
-    line-height: 1.5;
+    line-height: 1;
 }
 
-#workdates {
+.workdates {
     position: relative;
     text-align: right;
     margin-top: -22px;
-    padding-right: 12px;
+    padding-right: 2%;
 }
 
 li {
@@ -121,10 +90,10 @@ a:hover {
     float: left;
     margin-top: 50px;
     width: 10%;
-    min-height: 550px;
-    height: auto;
     background-color: #B9D7D9;
-    margin-bottom: 10px;
+    padding-bottom: 500em;
+    margin-bottom: -500em;
+    overflow: hidden;
 }
 
 .right {
@@ -132,9 +101,21 @@ a:hover {
     float: right;
     margin-top: 50px;
     width: 89%;
-    height: auto;
     background-color: #F4EBC3;
-    margin-bottom: 10px;
+    padding-bottom: 500em;
+    margin-bottom: -500em;
+    overflow: hidden;
+}
+
+.small-section {
+    -webkit-transition: 0.3s background linear;
+    -moz-transition: 0.3s background linear;
+    -o-transition: 0.3s background linear;
+    transition: 0.3s background linear;
+}
+
+.small-section:hover {
+    background: rgba(0,0,0,0.2);
 }
 
 #footer {
@@ -147,6 +128,7 @@ a:hover {
     font-size: 18px;
     text-align: center;
     color: #ffffff;
+    box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.5);
 }
 
 #footer p {
@@ -154,14 +136,9 @@ a:hover {
     padding-top: 15px;
 }
 
-#asian {
+.asian {
 /*    font-family: KaiTi, "STKaiTi", "Kai", "Fang Song", "FangSong";*/
     font-family: "KaiTi", "STKaiTi", "Kai", "Fang Song", "FangSong";
-}
-
-@font-face {
-    font-family: "KaiTi";
-    src: url(../fonts/simkai.ttf) format("truetype");
 }
 
 .body {
@@ -196,6 +173,33 @@ footer {
     padding-left: 40px;
 }
 
+table#skillz {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#skillz td, #skillz tr, #manytitle td, #manytitle tr {
+    padding: 5px 15px;
+    background-color: transparent;
+}
+
+#manytitle th {
+    padding: 5px 15px;
+}
+
+.secondarytitle {
+    background-color: transparent;
+    color: blue;
+}
+
+table#manytitle {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px 15px;
+}
+
 table, td {
     border-collapse: collapse;
     border: 2px solid rgba(0,0,0,0.1);
@@ -212,14 +216,14 @@ table {
 }
 
 table tr:nth-child(even) {
-     background-color: #ccc;
-}
-table tr:nth-child(odd) {
      background-color: #fff;
 }
+table tr:nth-child(odd) {
+     background-color: #ccc;
+}
 table th {
-    color: black;
-    background-color: silver;
+    color: white;
+    background-color: rgba(0,0,0,0.4);
 } 
 
 img {
