--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -61,7 +61,7 @@ h4 {
     padding-right: 2%;
 }
 
-li {
+ul li {
     margin-left: 24px;
     list-style-type: disc;
     font-family: Calibri, sans-serif;
@@ -200,6 +200,11 @@ table#manytitle {
     padding: 5px 15px;
 }
 
+table {
+    margin-left: 40px;
+    margin-bottom: 40px;
+}
+
 table, td {
     border-collapse: collapse;
     border: 2px solid rgba(0,0,0,0.1);
@@ -208,11 +213,6 @@ table, td {
 
 td, th {
     padding: 5px 15px;
-}
-
-table {
-    margin-left: 40px;
-    margin-bottom: 40px;
 }
 
 table tr:nth-child(even) {
