--- a/css/fixnav.css
+++ b/css/fixnav.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
 }
 
-#navigation {
+nav {
     position: fixed;
     top: 0;
     width: 100%;
@@ -21,7 +21,7 @@ body {
     color: rgba(1, 1, 1, 0.8);
 }
 
-#navigation a {
+nav a {
     font-size: 14px;
     padding: 10px 15px;
     color: white;
@@ -34,7 +34,7 @@ body {
 }
 
 
-#navigation a:hover {
+nav a:hover {
     color: black;
     background: rgba(255,255,255,0.6);
     cursor: pointer;
@@ -45,4 +45,29 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 65px;
+}
+
+nav ul ul {
+	display: none;
+}
+
+nav ul li:hover > ul {
+    display: block;
+}
+
+nav ul {
+	background: #efefef; 
+	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
+	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
+	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+	padding: 0 20px;
+	border-radius: 10px;  
+	list-style: none;
+	position: relative;
+	display: inline-table;
+}
+
+nav ul:after {
+    content: ""; clear: both; display: block;
 }
