--- a/css/fixnav.css
+++ b/css/fixnav.css
@@ -3,43 +3,6 @@ body {
     margin: 0;
 }
 
-nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    color: #ffffff;
-    height: 35px;
-    text-align: center;
-    padding-top: 15px;
-    /* Adds shadow to the bottom of the bar */
-    -webkit-box-shadow: 0px 0px 8px 0px #000000;
-    -moz-box-shadow: 0px 0px 8px 0px #000000;
-    -o-box-shadow: 0px 0px 8px 0px #000000;
-    box-shadow: 0px 0px 8px 0px #000000;
-    /* Adds the transparent background */
-    background-color: rgba(1, 1, 1, 0.8);
-    color: rgba(1, 1, 1, 0.8);
-}
-
-nav a {
-    font-size: 14px;
-    padding: 10px 15px;
-    color: white;
-    text-decoration: none;
-    /* Adds fade animation */
-    -webkit-transition:.4s background ease;
-    -moz-transition:.4s background ease;
-    -o-transition:.4s background ease;
-    transition:.4s background ease;
-}
-
-
-nav a:hover {
-    color: black;
-    background: rgba(255,255,255,0.6);
-    cursor: pointer;
-}
-
 .content {
     width: 500px;
     margin-left: auto;
@@ -69,5 +32,53 @@ nav ul {
 }
 
 nav ul:after {
-    content: ""; clear: both; display: block;
+    content: "";
+    clear: both;
+    display: block;
 }
+
+nav ul li {
+	float: left;
+}
+
+nav ul li:hover {
+    background: #4b545f;
+    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
+}
+
+nav ul li:hover a {
+    color: #fff;
+}
+	
+nav ul li a {
+    display: block; padding: 25px 40px;
+    color: #757575; text-decoration: none;
+}
+
+nav ul ul {
+	background: #5f6975; border-radius: 0px; padding: 0;
+	position: absolute; top: 100%;
+}
+
+nav ul ul li {
+    float: none;
+    border-top: 1px solid #6b727c;
+    border-bottom: 1px solid #575f6a;
+    position: relative;
+}
+
+nav ul ul li a {
+    padding: 15px 40px;
+    color: #fff;
+}
+
+nav ul ul li a:hover {
+    background: #4b545f;
+}
+
+nav ul ul ul {
+	position: absolute; left: 100%; top:0;
+}
+
