Path changes: More intuitive
Changes to fixnav.css (hopefully fixed);
Updated resume asian unicode html codes;
Changed header font for all notes subfiles;

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ h3 {
 
 .site-title {
   color: white;
-  font-family: "Rock Salt", cursive;
+  font-family: "Marck Script", cursive;
 }
 
 .site-tagline {
