--- a/css/fixnav.css
+++ b/css/fixnav.css
@@ -48,13 +48,18 @@ nav ul li:hover a {
 }
 	
 nav ul li a {
-    display: block; padding: 25px 40px;
-    color: #757575; text-decoration: none;
+    display: block;
+    padding: 25px 40px;
+    color: #757575;
+    text-decoration: none;
 }
 
 nav ul ul {
-	background: #5f6975; border-radius: 0px; padding: 0;
-	position: absolute; top: 100%;
+	background: #5f6975;
+    border-radius: 0px;
+    padding: 0;
+	position: absolute;
+    top: 100%;
 }
 
 nav ul ul li {
@@ -74,6 +79,8 @@ nav ul ul li a:hover {
 }
 
 nav ul ul ul {
-	position: absolute; left: 100%; top:0;
+	position: absolute;
+    left: 100%;
+    top:0;
 }
 
