--- a/css/fixnav.css
+++ b/css/fixnav.css
@@ -1,86 +1,70 @@
-.content {
-    width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 65px;
-}
-
-nav ul ul {
-	display: none;
-}
-
-nav ul li:hover > ul {
-    display: block;
-}
-
-nav ul {
-	background: #efefef; 
-	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
-	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
-	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
-	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
-	padding: 0 20px;
-	border-radius: 10px;  
-	list-style: none;
-	position: relative;
-	display: inline-table;
-}
-
-nav ul:after {
-    content: "";
-    clear: both;
-    display: block;
-}
-
-nav ul li {
-	float: left;
-}
-
-nav ul li:hover {
-    background: #4b545f;
-    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
-    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
-    background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
-}
-
-nav ul li:hover a {
-    color: #fff;
-}
-	
-nav ul li a {
-    display: block;
-    padding: 25px 40px;
-    color: #757575;
-    text-decoration: none;
-}
-
-nav ul ul {
-	background: #5f6975;
-    border-radius: 0px;
+* {
+    margin: 0;
     padding: 0;
-	position: absolute;
-    top: 100%;
 }
 
-nav ul ul li {
-    float: none;
-    border-top: 1px solid #6b727c;
-    border-bottom: 1px solid #575f6a;
+body {
+    font-family: Verdana;
+    background-color: #ABC;
+    padding: 50px;
+}
+
+header nav {
+    background: #DDD;
+    width: 100%;
+    font: normal 1em/1.5em "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+}
+
+header nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+header nav ul li {
+    display: block;
+    float: left;
     position: relative;
 }
 
-nav ul ul li a {
-    padding: 15px 40px;
-    color: #fff;
+.group:before, .group:after {
+    content: "\0020";
+    display: block;
+    height: 0;
+    overflow: hidden;
 }
 
-nav ul ul li a:hover {
-    background: #4b545f;
+.group:after {
+    clear:both;
 }
 
-nav ul ul ul {
-	position: absolute;
-    left: 100%;
-    top:0;
+.group {
+    zoom: 1;
 }
 
+header nav a {
+    display: block;
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+}
+
+header nav a:hover {
+    background: #333;
+    color: white;
+}
+
+header nav ul li ul {
+    display: none;
+    position: absolute;
+    background: #BBB;
+}
+
+header nav ul li:hover > ul {
+    display: block;
+}
+
+header nav ul li ul li {
+    display: block;
+    width: 100%;
+}
