--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ h3 {
   display: -ms-flexbox;
   display: flex;
   text-transform: uppercase;
+  z-index: 3000;
 }
 .main-nav ul a:hover, .main-nav ul a:focus {
   background: #ffe5a5;
@@ -135,11 +136,12 @@ h3 {
     position: absolute;
 }
 .main-nav ul li:hover > ul {
-    display: block;
+    display: inherit;
+    background: #ffc125;
+    width: auto;
 }
 .main-nav ul li ul li {
-    display: block;
-    width: 100%;
+    display: inherit;
 }
 
 @media (max-width: 700px) {
