--- a/css/v_style.css
+++ b/css/v_style.css
@@ -76,8 +76,8 @@ ul li {
     height:100%;
     position:absolute;
     top:0;
-    left:0
-    opacity:0;
+    left:0;
+    opacity:0.4;
 }
 
 .divider {
