--- a/css/fixnav.css
+++ b/css/fixnav.css
@@ -9,10 +9,20 @@ body {
     padding: 50px;
 }
 
-header nav {
+header {
     background: #DDD;
     width: 100%;
+    overflow: hidden;
+    margin-left: -50px;
+    margin-top: -50px;
+    padding: 50px 50px 0;
+    z-index: 1;
+}
+
+header nav {
+    width: 100%;
     font: normal 1em/1.5em "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+    position: fixed;
 }
 
 header nav ul {
@@ -25,21 +35,6 @@ header nav ul li {
     display: block;
     float: left;
     position: relative;
-}
-
-.group:before, .group:after {
-    content: "\0020";
-    display: block;
-    height: 0;
-    overflow: hidden;
-}
-
-.group:after {
-    clear:both;
-}
-
-.group {
-    zoom: 1;
 }
 
 header nav a {
@@ -66,5 +61,11 @@ header nav ul li:hover > ul {
 
 header nav ul li ul li {
     display: block;
-    width: 100%;
+    width: auto;
+}
+
+p {
+    position: relative;
+    clear: both;
+    z-index: 0;
 }
