--- a/thanks.jade
+++ b/thanks.jade
@@ -5,7 +5,7 @@ html(lang="en")
     meta(charset="utf-8")
     meta(name="author", content="Marvin Alcantara")
     
-    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous|Marck+Script", type="text/css")
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700", type="text/css")
     meta(name="viewport", content="width=device-width")
     
     link(rel="stylesheet", href="css/normalize.css")
@@ -58,3 +58,8 @@ html(lang="en")
             .item(style="width=100%")
               p Thank you for your interest! I will get back to you as soon as I can.
               a(href="/contact") Return
+    footer.footer
+      .container
+        <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated April 17, 2015.</p>
+    script(src="http://codepen.io/assets/libs/fullpage/jquery.js")
+    script(src="js/index.js")
