--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,29 @@ body {
   }
 }
 
+/* Parallax */
+
+.box {
+  position: relative;
+  height: 240px;
+  background-image: url(http://lorempixel.com/1300/240/nature/3);
+  background-size: auto 240px;
+  background-position: top center;
+  background-attachment: fixed;
+  overflow: hidden;
+}
+
+.logo {
+  height:110px;
+  width: 100%;
+  background-image: url(/images/site-title.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 50%;
+  margin-top: -55px;
+}
+
 h1, h2, h3 {
   font-family: "Open Sans", sans-serif;
   font-size: 2.1em;
