--- a/thanks.jade
+++ b/thanks.jade
@@ -32,8 +32,6 @@ html(lang="en")
                 a(href="/notes/chn") Chinese
               li
                 a(href="/notes/geo") Geography
-              li
-                a(href="/notes/meteor") Meteorology
           li
             a(href="/works/") Works
             ul
@@ -59,6 +57,5 @@ html(lang="en")
       .container
         <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated May 1, 2015.</p>
     script(src="http://codepen.io/assets/libs/fullpage/jquery.js")
-    script(src="js/index.js")
-    script
-      $(window).scroll(function(){ var wScroll = $(this).scrollTop(); $('.logo').css({'transform' : 'translate(0px, '+ wScroll /2 +'%)'});});
+    script(src="/js/index.js")
+    script(src="/js/index.js")
