--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,8 @@
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
+  position: fixed;
 }
 
 .jumbotron .container {
